// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.component renders correctly the primary variant 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  font-weight: 700;
  height: 40px;
  min-width: 80px;
  cursor: pointer;
  border: 1px solid transparent;
  background: rgb(0,85,255);
  color: white;
}

.c0:hover,
.c0:active {
  background: rgb(0,72,217);
}

<button
  class="c0"
>
  Example button
</button>
`;

exports[`Button.component renders correctly the secondary variant 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  font-weight: 700;
  height: 40px;
  min-width: 80px;
  cursor: pointer;
  border: 1px solid rgb(0,85,255);
  background: transparent;
  color: rgb(0,85,255);
}

.c0:hover,
.c0:active {
  background: rgb(0,72,217);
  color: white;
}

<button
  class="c0"
>
  Example button
</button>
`;
